Weight/Vertex Paint doesn't work on small mesh with Mirror Modifier #39279

Closed
opened 2014-03-20 12:47:18 +01:00 by Jun T · 11 comments

System Information
Arch Linux (x86-64)
nVidia Geforce GTX 670

Blender Version
Broken: 2.70 official release, 2.69 official release

Short description of error
When Mirror Modifier is On, there are vertices which cannot be painted in specific view angle and zoom.

Exact steps for others to reproduce the error
Open weight_test.blend. Keep the view and paint the mesh.
Also, in Vertex Paint mode, it happens too.

**System Information** Arch Linux (x86-64) nVidia Geforce GTX 670 **Blender Version** Broken: 2.70 official release, 2.69 official release **Short description of error** When Mirror Modifier is On, there are vertices which cannot be painted in specific view angle and zoom. **Exact steps for others to reproduce the error** Open [weight_test.blend](https://archive.blender.org/developer/F81923/weight_test.blend). Keep the view and paint the mesh. Also, in Vertex Paint mode, it happens too.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @junt

Added subscriber: @junt
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-03-21 10:23:48 +01:00

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

This could be just a clipping distance?

@Psy-Fi, mind checking on this please?

This could be just a clipping distance? @Psy-Fi, mind checking on this please?

Yes, looks like clipping, will take care of it

Yes, looks like clipping, will take care of it

This issue was referenced by blender/blender-addons-contrib@0da3e97433

This issue was referenced by blender/blender-addons-contrib@0da3e974338b3971e9a4982b2fbf59579b232cff

This issue was referenced by 0da3e97433

This issue was referenced by 0da3e974338b3971e9a4982b2fbf59579b232cff

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0da3e97433.

Closed by commit 0da3e97433.

This issue was referenced by blender/blender-addons-contrib@3b0832dd86

This issue was referenced by blender/blender-addons-contrib@3b0832dd869b4c27f0b976e36134332cf427430c

This issue was referenced by 3b0832dd86

This issue was referenced by 3b0832dd869b4c27f0b976e36134332cf427430c
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39279
No description provided.